--- a/index.html
+++ b/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biodata Habib</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <!-- style dan bootstrap -->
+    <link rel="stylesheet" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+  </head>
 
-<body>
-    
-    <h1 style="text-align: center;">Biodata Habib</h1>
+  <body>
+    <!-- navbar -->
+    <nav class="navbar mb-2" style="background-color: #e3f2fd">
+      <div class="container">
+        <a class="navbar-brand" href="#">Biolink Ade Habib</a>
+      </div>
+    </nav>
 
     <!-- foto profil -->
-    <div class="foto" style="text-align: center;">
-        <img src="img/gambar1.jpg" alt="gambar1">
+    <div class="text-center">
+      <img src="img/gambar1.jpg" class="rounded-circle" alt="gambar1" />
     </div>
-<p style="text-align: center; font-size: 22px;">Perkenalkan nama saya Ade Habib Dirja seorang programmer pemula yang sedang belajar membuat sebuha website html.</p>    
 
-<p><div style="text-align: center;"><a class="btn1" href="https://instagram.com/ade_habib">Instagram</a></div></p>
-<p id="btn2"><div style="text-align: center;"><a class="btn2" href="https://facebook.com">Facebook</a></div></p>
-<p id="btn3"><div style="text-align: center;"><a class="btn3" href="https://wa.me/+62895615262063">whatsapp</a></div></p>
+    <!-- pengenalan singkat -->
+    <div class="container">
+      <p class="border border-primary-subtle mb-2 mt-2" style="text-align: center"><em>Perkenalkan nama saya Ade Habib Dirja seorang Front End Web Development sejak 2021 sampai saat ini.</em></p>
+    </div>
 
+    <!-- link sosial media -->
+    <div class="container">
+      <a class="btn btn-primary mt-2" style="width: 100%" href="https://instagram.com/ade_habib">Instagram</a><br />
+      <a class="btn btn-primary mt-2" style="width: 100%; background-color: blue" href="https://facebook.com">Facebook</a><br />
+      <a class="btn btn-primary mt-2" style="width: 100%; background-color: green" href="https://wa.me/+62895615262063">whatsapp</a>
+    </div>
 
-</body>
+    <!-- bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  </body>
 </html>
